--- a/BookManagement/build.gradle
+++ b/BookManagement/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	implementation 'org.springframework.boot:spring-boot-starter-validation:2.6.7'
 }
 
 tasks.named('test') {
